--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -48,16 +48,16 @@
                     <div class="panel-heading">
                         <h3 class="panel-title">购买批次</h3>
                     </div>
-                    <div class="panel-body">
-                        <table class="table">
+                    <div class="panel-body" style="overflow-x:auto;">
+                        <table class="table" style="min-width:500px;">
                             <thead>
                                 <tr>
-                                    <th>批次</th>
-                                    <th>型号</th>
-                                    <th>台数</th>
-                                    <th>成本</th>
-                                    <th>收益</th>
-                                    <th>回本比例</th>
+                                    <th width="80px">批次</th>
+                                    <th width="80px">型号</th>
+                                    <th width="80px">台数</th>
+                                    <th width="80px">成本</th>
+                                    <th width="80px">收益</th>
+                                    <th width="80px">回本比例</th>
                                 </tr>
                             </thead>
                             <tbody id="projectTable">
