--- a/src/app/components/user-info/user-info.component.html
+++ b/src/app/components/user-info/user-info.component.html
@@ -17,7 +17,7 @@
         <div class="eq-height">
             <div class="col-md-12">
                 <div class="tab-base tab-stacked-left">
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs col-xs-12 col-sm-3">
                         <li class="active">
                             <a data-toggle="tab" href="#demo-stk-lft-tab-1" aria-expanded="true">个人信息</a>
                         </li>
@@ -30,7 +30,7 @@
                     </ul>
 
                     <!--Tabs Content-->
-                    <div class="tab-content">
+                    <div class="tab-content col-xs-12 col-sm-9">
                         <div id="demo-stk-lft-tab-1" class="tab-pane fade  active in">
                             <div class="p-a-md dker _600">基本信息</div>
                             <div class="padding">
