--- a/src/app/workspace/header/header.component.html
+++ b/src/app/workspace/header/header.component.html
@@ -1,7 +1,7 @@
 <div id="navbar-container" class="boxed">
     <div class="navbar-header">
         <a href="index.html" class="navbar-brand">
-            <img src="../../../../assets/img/logo.png" alt="Nifty Logo" class="brand-icon">
+            <img src="assets/img/logo.png" alt="Nifty Logo" class="brand-icon">
             <div class="brand-title">
                 <span class="brand-text">联合挖矿</span>
             </div>
@@ -15,7 +15,7 @@
                 </a>
             </li>
             <li class="tgl-menu-info">
-                <span class="brand-text">BTC.top联合挖矿</span>
+                <span class="brand-text">联合挖矿</span>
             </li>
             <li>
                 <div class="custom-search-form" style="text-align:left;width: 150px;">
