--- a/src/app/workspace/menu/menu.component.html
+++ b/src/app/workspace/menu/menu.component.html
@@ -123,7 +123,9 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="list-divider"></li>
+                    <a class="mainnav-toggle2" href="#">
+                        <i class="demo-pli-list-view"></i>
+                    </a>
                 </ul>
             </div>
         </div>
