--- a/src/app/components/project-profit-history/project-profit-history.component.html
+++ b/src/app/components/project-profit-history/project-profit-history.component.html
@@ -20,7 +20,7 @@
                     <div class="panel-heading">
                         <h3 class="panel-title">历史收益表</h3>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" style="overflow-x:auto">
                         <table class="table">
                             <thead>
                                 <tr>
